removed _id_ from sequence names